# CTFGenerator

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: coverage.yml  nightly.yml  pr.yml  release.yml
alembic/: env.py
alembic/versions/: 20260711_0001_baseline.py  20260711_0002_competitions.py  20260712_0003_identity.py  20260712_0004_challenges.py  20260712_0005_ledger.py  20260712_0006_jobs.py  20260712_0007_workers.py  20260712_0008_score_projection.py  20260712_0009_scheduling_quotas.py  20260712_0010_instances.py  20260712_0011_auth.py  20260712_0012_oidc_login_transactions.py  20260713_0013_eval_runs.py  20260713_0014_audit_events.py
deploy/: .env.example  Dockerfile.api  Dockerfile.worker  docker-compose.yml  entrypoint.sh  verify-deploy.sh
docs/: ARCHITECTURE.md  CHALLENGE_SDK.md  HOSTING.md  MATURITY.md  PRODUCT.md  RELEASE_CRITERIA.md  RELEASE_QUALIFICATION.md  REQUIREMENTS.md  SUPPORT_MATRIX.md  current-cli.md  current-schemas.md  current-system.md  getting-started.md  risk-register.md  supported-cli.md
docs/adr/: 000-template.md  001-control-plane-execution-plane-boundary.md  002-postgresql-persistence.md  003-postgres-backed-job-queue.md  004-rootless-container-runtime.md  005-package-dependency-boundaries.md  006-persistence-schema-and-immutability.md  007-authentication-and-sessions.md  008-oidc-federation.md
docs/api/: endpoints.md  openapi-draft.yaml  slice-a-limitations.md
docs/architecture/: build-challenge-worker-pipeline.md  current.md  dependency-rules.md  overview.md  persistence-design.md
docs/evaluation/: eval-worker-limitations.md
docs/operations/: backup-recovery-upgrade.md  configuration.md
docs/security/: incident-response.md  oidc.md  responsible-disclosure.md  runtime-isolation.md  secret-management.md  threat-model.md
docs/validation/: README.md  ai-resistance.md  capacity.md  closed-beta-report.md  conformance.md  coverage.md  e2e.md  gate-status.md  internal-alpha-report.md  security-checklist.md
docs/web/: contestant-portal.md
scripts/: _lib.sh  alpha_sim.py  backup.sh  beta_sim.py  coverage.sh  loadtest.py  recovery_drill.sh  restore.sh
src/ctf_generator/: __init__.py  agent_eval.py  build.py  cli.py  competition_service.py  cve_blueprint.py  cve_source.py  dashboard_server.py  dashboard_ui.py  events.py  families.py  generator.py  mcp_server.py  models.py  postgres_events.py  replay_validator.py  report_index.py  report_writer.py  runtime_validator.py  scenario.py  scenario_runtime.py  schema.py  score.py  scoreboard.py  scoring_engine.py  sibling_validator.py  spec_generator.py  validator.py  yaml_writer.py
src/ctf_generator/application/: __init__.py  worker_enrollment.py
src/ctf_generator/application/audit/: __init__.py  service.py
src/ctf_generator/application/auth/: __init__.py  hashing.py  service.py
src/ctf_generator/application/authoring/: __init__.py  artifact_download.py  build_service.py  full_bundle.py  materialization.py
src/ctf_generator/application/backup/: __init__.py  __main__.py  verify.py
src/ctf_generator/application/catalog/: __init__.py  challenge_service.py  competition_service.py  publication_service.py  team_service.py
src/ctf_generator/application/evaluation/: __init__.py  projector.py  service.py
src/ctf_generator/application/execution/: __init__.py  worker_build_service.py  worker_instance_service.py  worker_job_service.py
src/ctf_generator/application/identity/: __init__.py  service.py
src/ctf_generator/application/instances/: __init__.py  corrective.py  reconciler.py  service.py
src/ctf_generator/application/jobs/: __init__.py  service.py
src/ctf_generator/application/scheduling/: __init__.py  service.py
src/ctf_generator/application/scoring/: __init__.py  projector.py  (+1 more)
src/ctf_generator/domain/: __init__.py  repositories.py
src/ctf_generator/infrastructure/: __init__.py  event_store.py
src/ctf_generator/interfaces/: __init__.py
src/ctf_generator/observability/: __init__.py  logging.py  secrets.py
src/ctf_generator/sdk/: __init__.py  adapter.py  lint.py  plugins.py  scaffold.py
src/ctf_generator/templates/: __init__.py  binary.py  cloud.py  crypto.py  forensics.py  mobile.py  network.py  scada_ics.py  tenant_export.py
src/ctf_generator/testing/: __init__.py
src/ctf_generator/workers/: __init__.py  eval_runner.py  http_client.py  local_client.py  worker.py
tests/: test_agent_eval.py  test_alpha_sim_integration.py  test_api_artifact_download_integration.py  test_api_audit_integration.py  test_api_auth_integration.py  test_api_authz_scoping_integration.py  test_api_builds_integration.py  test_api_competitions_integration.py  test_api_evaluations_integration.py  test_api_foundation.py  test_api_instances_integration.py  test_api_jobs_integration.py  test_api_openapi_contract.py  test_api_publications_integration.py  test_api_scoreboard_integration.py  test_api_slice_a_review.py  test_api_submissions_integration.py  test_api_system_health_metrics_integration.py  test_api_system_integration.py  test_api_users_integration.py  test_architecture_boundaries.py  test_artifact_local_store_unit.py  test_audit_repository_integration.py  test_audit_sink_integration.py  test_auth_models.py  test_auth_repository_integration.py  test_authoring_models.py  test_backup_scripts_smoke.py  test_baseline_fixtures.py  test_beta_sim_integration.py  test_build_challenge_worker_integration.py  test_build_hardening.py  test_build_isolation_integration.py  test_build_materialization_integration.py  test_capability_detection.py  test_capacity_smoke_integration.py  test_challenge_repository_integration.py  test_cli_auth_integration.py  test_cli_client_unit.py  test_cli_commands_unit.py  (+111 more)
tests/fixtures/: fake_idp.py
tests/fixtures/baseline/: _index.json  binary_heap_exploit.json  cloud_metadata_ssrf.json  crypto_token_forgery.json  forensics_incident_triage.json  mobile_insecure_storage.json  network_lateral_pivot.json  scada_ics_modbus_takeover.json  web_business_logic_tenant_export.json
(+183 files in other folders)
