[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-generator"
dynamic = ["version"]
description = "AI-assisted CTF environment generator and validator."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CTFGenerator contributors" }]
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Environment :: Console",
    "License :: Other/Proprietary License",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# LLM-backed spec generation. Each provider is an independent optional extra so
# the core tool stays dependency-free.
anthropic = ["anthropic>=0.49"]
# Live NVD CVE lookups use stdlib urllib.request; this extra is the opt-in /
# network gate rather than a package dependency.
cve = []
# Run CTFGenerator as an MCP server (`ctfgen-mcp`) so an MCP host drives it with
# the user's own model/subscription.
mcp = ["mcp>=1.2"]
openai = ["openai>=1.40"]
# Durable Postgres-backed event store (postgres_events.py) for real
# competitions; a fake connection is injected in tests, so this extra is
# only needed when connecting from a DSN with a real driver.
postgres = ["psycopg[binary]>=3.1"]
# The live dashboard (dashboard_server.py) is stdlib-only (http.server/hmac/
# hashlib/secrets/pbkdf2); this extra is the opt-in gate / future home for
# production niceties (e.g. a real WSGI server), not a package dependency.
web = []

[project.scripts]
ctfgen = "ctf_generator.cli:main"
ctfgen-mcp = "ctf_generator.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Judgernaut777/CTFGenerator"
Repository = "https://github.com/Judgernaut777/CTFGenerator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ctf_generator.__version__" }
