[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-generator"
dynamic = ["version"]
description = "AI-assisted CTF environment generator and validator."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CTFGenerator contributors" }]
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Environment :: Console",
    "License :: Other/Proprietary License",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# LLM-backed spec generation. Each provider is an independent optional extra so
# the core tool stays dependency-free.
anthropic = ["anthropic>=0.49"]
# Live NVD CVE lookups use stdlib urllib.request; this extra is the opt-in /
# network gate rather than a package dependency.
cve = []
# Run CTFGenerator as an MCP server (`ctfgen-mcp`) so an MCP host drives it with
# the user's own model/subscription.
mcp = ["mcp>=1.2"]
openai = ["openai>=1.40"]
# Durable Postgres-backed event store (postgres_events.py) for real
# competitions; a fake connection is injected in tests, so this extra is
# only needed when connecting from a DSN with a real driver.
postgres = ["psycopg[binary]>=3.1"]
# M6 persistence foundation: SQLAlchemy 2.x ORM + Alembic migrations. The
# control plane's durable source of truth. Requires a real database driver
# (see `postgres`). Integration tests are Docker-gated and skip when this extra
# is not installed, so the stdlib-only unit suite stays green without it.
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1"]
# M9 production HTTP API (interfaces/api): FastAPI + Pydantic v2 served by
# uvicorn. httpx backs Starlette's TestClient. Kept as an opt-in extra so the
# stdlib-only unit gate stays dependency-free; the API tests SKIP cleanly when
# this extra is absent, exactly like the `db` integration suites. The HTTP layer
# is a thin adapter over the application services and requires `db` at runtime.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2", "httpx>=0.27"]
# M10c federated login (OIDC/OAuth2). ID-token / JWKS verification uses the
# vetted PyJWT + cryptography stack (RS256/ES256, JWKS via jwt.PyJWKSet) -- the
# crypto is NEVER hand-rolled. Discovery / token-exchange HTTP reuses httpx from
# [api]. Kept as an opt-in extra so the stdlib-only unit gate stays dependency-
# free; the OIDC tests SKIP cleanly when this extra is absent, exactly like the
# [db]/[api] suites. OIDC is a LOGIN method that issues a normal M10a local
# session; it adds no new bearer type.
oidc = ["pyjwt[crypto]>=2.8"]
# The live dashboard (dashboard_server.py) is stdlib-only (http.server/hmac/
# hashlib/secrets/pbkdf2); this extra is the opt-in gate / future home for
# production niceties (e.g. a real WSGI server), not a package dependency.
web = []
# Lint / type / security tooling used by CI (.github/workflows/pr.yml). Kept out
# of `dev` so `pip install .[dev]` for running tests stays minimal.
ci = ["ruff>=0.6", "mypy>=1.11", "bandit>=1.7", "pip-audit>=2.7", "build>=1.2", "twine>=5"]

[project.scripts]
ctfgen = "ctf_generator.cli:main"
ctfgen-mcp = "ctf_generator.mcp_server:main"
ctfgen-worker = "ctf_generator.workers.worker:main"
ctfgen-admin = "ctf_generator.interfaces.cli.admin:main"

[project.urls]
Homepage = "https://github.com/Judgernaut777/CTFGenerator"
Repository = "https://github.com/Judgernaut777/CTFGenerator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ctf_generator.__version__" }

# --- Tooling (introduced in the Milestone 2 CI foundation) ---------------------
# Lint and type gates run in CI as INFORMATIONAL until the Milestone 5 domain
# refactor cleans the pre-existing flat package; they are then promoted to
# required. Config lives here so local and CI runs agree.

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"
extend-exclude = ["**/templates/**/__pycache__"]

[tool.ruff.lint]
# Start with a conservative, high-signal rule set; widen during the refactor.
select = ["E", "F", "I", "UP", "B", "S"]
# S = flake8-bandit: keep the security lints, but the generator legitimately
# builds challenge code, so per-file ignores are expected to grow under
# [tool.ruff.lint.per-file-ignores] rather than disabling the rule globally.
ignore = ["E501"] # line length is enforced by the formatter, not the linter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # asserts are expected in tests
# The HTTP interface uses FastAPI's dependency-injection idiom, where
# `Depends(...)` / `Query(...)` are *intentionally* evaluated in argument
# defaults -- that is how the framework declares dependencies. B008 flags exactly
# that pattern, so it is a false positive for this package only.
"src/ctf_generator/interfaces/api/**" = ["B008"]
"src/ctf_generator/templates/**" = ["S"] # renderers emit deliberately vulnerable code
# M8 slice-2 runtime tests DRIVE the docker CLI directly (that is the point of a
# real-container isolation test): S603/S607 (subprocess + partial `docker` path)
# and S110 (best-effort tearDown cleanup) are inherent to these harnesses.
"tests/test_docker_backend_integration.py" = ["S603", "S607", "S108", "S110"]
"tests/test_team_isolation_integration.py" = ["S603", "S607", "S110"]
"tests/test_build_isolation_integration.py" = ["S603", "S607"]
"tests/test_worker_loop_integration.py" = ["S603", "S607", "S110"]
"tests/test_container_policy_flags.py" = ["S108"] # a docker --tmpfs spec literal, not a temp file
"tests/test_worker_dispatch.py" = ["S105", "S106"] # fake bearer-token fixtures, not real secrets
# The OIDC flow/security tests mint ID tokens, drive PKCE, and carry fake client
# secrets / codes / tokens as literals -- S105/S106 (hardcoded "secret"-looking
# strings) are the point of a federated-login test double, not real secrets.
"tests/test_oidc_flow_integration.py" = ["S105", "S106"]
"tests/fixtures/fake_idp.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
files = ["src/ctf_generator"]
# Lenient baseline: the goal now is to catch outright breakage, not to annotate
# 10k lines at once. Tighten module-by-module during the M5 refactor by adding
# stricter per-module overrides below.
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = false

[tool.pytest.ini_options]
# The test suite is import-path sensitive (tests dir must be importable and the
# package resolved from src). CI runs unittest directly; this block lets
# `pytest` work locally too.
pythonpath = ["src", "tests"]
testpaths = ["tests"]

